edit markup according to the technical specification

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,19 @@
 {
   "cSpell.words": [
+    "адаптуючи",
     "активом",
     "бізнесу",
     "білій",
     "білява",
     "бородою",
     "вашого",
+    "Дем'яненко",
     "деталей",
     "дівчина",
+    "екраном",
     "Ефективні",
+    "Єрмаков",
+    "жіночих",
     "Завдання",
     "завдань",
     "займаємося",
@@ -16,51 +21,82 @@
     "Значимість",
     "значною",
     "зумовлює",
+    "Ігор",
     "Ідейні",
     "кадрів",
     "Київ",
+    "клавітурою",
+    "колір",
+    "кольорів",
     "команда",
     "консультація",
     "Контакти",
     "короткою",
     "Лесі",
+    "Людина",
+    "Микола",
+    "Михайло",
     "міркування",
     "мірою",
     "місце",
+    "мобільний",
     "Молода",
     "Молодий",
+    "набираючи",
     "навіть",
     "навчання",
     "настільки",
     "Наша",
+    "ноутбуком",
+    "обирають",
+    "окремим",
     "окулярах",
+    "Ольга",
     "організації",
     "особливо",
     "очевидна",
+    "палітри",
+    "папірцями",
     "піджаку",
     "планових",
     "Планування",
+    "Планшет",
+    "планшетом",
     "повсякденної",
     "позиції",
     "Портфоліо",
     "послугу",
     "початок",
+    "працює",
+    "пристрій",
     "проблем",
+    "програміст",
     "Пунктуальність",
     "рамки",
     "реалізація",
+    "ремоут",
+    "Рєпіна",
     "рішення",
     "роботи",
+    "Робочій",
+    "руках",
+    "руці",
+    "сайт",
     "само",
     "себе",
     "сорочці",
+    "стіл",
+    "стільників",
     "Студія",
     "Сучасні",
+    "Тарасов",
+    "телефоном",
     "темно",
     "технології",
     "тягне",
     "Увага",
     "Українки",
+    "формі",
     "формування",
     "футболці",
     "червоній",
@@ -69,6 +105,8 @@
     "чорному",
     "чорнявий",
     "широким",
-    "щетиною"
+    "щетиною",
+    "якій",
+    "якому"
   ]
 }
