fix after mentor review

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
     "навчання",
     "настільки",
     "Наша",
+    "Наші",
     "ноутбуком",
     "обирають",
     "окремим",
@@ -57,6 +58,7 @@
     "очевидна",
     "палітри",
     "папірцями",
+    "переваги",
     "піджаку",
     "планових",
     "Планування",
